--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "upi": "^0.0.0"
   },
   "name": "samplebooks",
   "version": "1.0.0",
